--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "accordion-collapse-react-native": "^0.1.11",
     "axios": "^0.19.0",
     "expo": "^33.0.0",
     "react": "16.8.3",
