--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.1"
+    "react-navigation": "^3.11.1",
+    "tcomb-form-native": "^0.6.20",
+    "validate.js": "^0.13.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
