--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -5,12 +5,15 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "mocha utils/spec/utils.spec.js"
   },
   "dependencies": {
     "accordion-collapse-react-native": "^0.1.11",
     "axios": "^0.19.0",
+    "chai": "^4.2.0",
     "expo": "^33.0.0",
+    "mocha": "^6.2.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
