--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -9,6 +9,8 @@
     "test": "mocha utils/spec/utils.spec.js"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.3",
+    "@material-ui/icons": "^4.2.1",
     "accordion-collapse-react-native": "^0.1.11",
     "axios": "^0.19.0",
     "chai": "^4.2.0",
@@ -18,7 +20,6 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-draggable-flatlist": "^1.1.7",
-    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
     "tcomb-form-native": "^0.6.20",
