--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -16,6 +16,7 @@
     "chai": "^4.2.0",
     "expo": "^33.0.0",
     "mocha": "^6.2.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
