--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-draggable-flatlist": "^1.1.7",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-progress": "^3.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
