--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -15,11 +15,14 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "expo": "^33.0.0",
+    "firebase": "^6.3.4",
+    "kelvin-to-celsius": "^1.1.0",
     "mocha": "^6.2.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-draggable-flatlist": "^1.1.7",
+    "react-native-elements": "^1.1.0",
     "react-native-progress": "^3.6.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.1",
