--- a/Vegryo/package.json
+++ b/Vegryo/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "chai": "^4.2.0",
     "expo": "^33.0.0",
+    "expo-font": "^5.0.1",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
     "react": "16.8.3",
